--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,2 +1,24 @@
 /* _base.sass — contains all the resets, variables, mixins, and utility classes
 */
+
+/* variables*/
+/*------colors---------*/
+$clr-primary-400: hsl(158, 36%, 37%);
+$clr-primary-300: hsl(30, 38%, 92%);
+
+$clr-natural-900: hsl(212, 21%, 14%);
+$clr-natural-600: hsl(228, 12%, 48%);
+$clr-natural-100: hsl(0, 0%, 100%);
+
+/*------Typography---------*/
+
+/*******--Font Family-- *******/
+$ff-primary: 'Montserrat', sans-serif;
+$ff-secondary: 'Fraunces', sans-serif;
+
+/*******--Font Weight-- *******/
+$fw-semi-bold: 500;
+$fw-bold: 700;
+
+/*******--Font Size-- *******/
+$fs-400: 1.4rem;
