--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,2 +1,6 @@
 /*_layout.sass — all the Sass code handling the layout, which is the container and grid systems
 */
+
+body {
+  font-size: 1rem;
+}
