--- a/sass/index.scss
+++ b/sass/index.scss
@@ -3,6 +3,7 @@ The simple structure is convenient for a small project like a single web page. F
 
 /*_main.sass — the main partial should contain only the imports of the already mentioned files*/
 
+@forward './reset';
 @forward './base';
 @forward './components';
 @forward './layout';
