--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -117,7 +117,7 @@ body {
       height: 100%;
       width: 50%;
       border-radius: 1rem 0 0 1rem;
-      background-size: 100%;
+      background-size: cover;
     }
   }
 }
