--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ body {
 
 .card {
   width: 90%;
-  height: 85vh;
+  max-width: 650px;
   background-color: hsl(0deg, 0%, 100%);
   border-radius: 1rem;
   display: flex;
@@ -99,12 +99,12 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 .card__img {
-  background-image: url("../images/image-product-desktop.jpg");
+  background-image: url("../images/image-product-mobile.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 35vh;
+  min-height: 400px;
   border-top-right-radius: 1rem;
   border-top-left-radius: 1rem;
 }
@@ -172,20 +172,22 @@ body {
     transition: ease all 0.2s;
   }
   .card {
-    width: 80vw;
-    height: 60vh;
+    height: 50rem;
     flex-direction: row;
     border-radius: 1rem;
   }
   .card__content {
     width: 30rem;
-    height: 90%;
-    justify-content: space-evenly;
-    margin: auto;
+    height: 100%;
+    margin-inline: 2em;
   }
   .card__img {
-    height: 100%;
+    background-image: url("../images/image-product-desktop.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 50%;
+    height: 100%;
     border-radius: 1rem 0 0 1rem;
     background-size: cover;
   }
