--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -9,7 +9,7 @@ body {
 
 .card {
   width: 90%;
-  height: 85vh;
+  max-width: 650px;
 
   background-color: b.$clr-natural-100;
   border-radius: 1rem;
@@ -20,15 +20,15 @@ body {
   font-family: b.$ff-primary;
 
   &__img {
-    @include b.background-img('../images/image-product-desktop.jpg');
+    @include b.background-img('../images/image-product-mobile.jpg');
 
     width: 100%;
-    height: 35vh;
-
+    min-height: 400px;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
     // border-bottom-left-radius: 1rem;
   }
+
   &__content {
     // background-color: red;
 
@@ -112,22 +112,20 @@ body {
   }
 
   .card {
-    width: 80vw;
-    height: 60vh;
+    height: 50rem;
     flex-direction: row;
-
     border-radius: 1rem;
 
     &__content {
       width: 30rem;
-      height: 90%;
-      justify-content: space-evenly;
-      margin: auto;
+      height: 100%;
+      margin-inline: 2em;
     }
 
     &__img {
-      height: 100%;
+      @include b.background-img('../images/image-product-desktop.jpg');
       width: 50%;
+      height: 100%;
       border-radius: 1rem 0 0 1rem;
       background-size: cover;
     }
